# ig_orchestrator

./: .env.example  .gitignore  Agents.md  CHANGELOG.md  PLAN.md  README.md  ejecutar_gui.bat  ejecutar_run_continue.bat  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: app.example.json  batch.example.json  batch.json
reports/: run_20260616_134657.md  run_20260705_193351.md
scripts/: poc_telethon_bot_download.py  poc_telethon_bot_download_v2.py  poc_telethon_bot_download_v3.py  poc_telethon_bot_download_v4.py  poc_telethon_bot_download_v5.py  poc_telethon_bot_download_v6.py  poc_telethon_bot_download_v7.py
tasks/: Patch_v1.26.10.md  Patch_v1.26.3.md  Patch_v1.26.4.md  Patch_v1.26.5.md  Patch_v1.26.6.md  Patch_v1.26.7.md  Patch_v1.26.8.md  Patch_v1.26.9.md  Tarea1.md  Tarea10.md  Tarea11.md  Tarea12.md  Tarea13.md  Tarea14.md  Tarea15.md  Tarea16.md  Tarea17.md  Tarea18.md  Tarea19.md  Tarea2.md  Tarea20.md  Tarea21.md  Tarea22.md  Tarea23.md  Tarea24.md  Tarea3.md  Tarea4.md  Tarea5.md  Tarea6.md  Tarea7.md  Tarea8.md  Tarea9.md  Tarea_Post01.md  Tarea_Post03.md  Task Invoke Manual Rename Process After Batch Completion.md  task-gui.md
tests/: test_account_orchestrator.py  test_batch_cleanup.py  test_batch_file_service.py  test_batch_importer.py  test_batch_json_parser.py  test_batch_orchestrator.py  test_bot_conversation_service.py  test_bot_response_parser.py  test_db_repositories.py  test_file_classifier.py  test_file_mover.py  test_file_watcher.py  test_folder_service.py  test_gui_services.py  test_logging_config.py  test_models.py  (+9 more)
(+115 files in other folders)
